# blue-green-H2

./: .gitignore  LICENSE.md  Pipfile  README.md  app.py  dump_params.py  dump_results.py  export.py  lcoh-barchart.R  plot.py  production.sh  pyproject.toml  regression.R  server.py  webapp.py  wsgi.py
assets/: base.css  pik-interactive.css  style.css
config/: global.yml  styles.yml
config/plots/: BarsPlot.yml  BlueGreenPlot.yml  CostEmiOverTimePlot.yml  FSCPCorridors.yml  FSCPOverTimePlot.yml  HeatmapPlot.yml  SensitivityPlot.yml
data/: fuels.yml  iea.csv  options.yml  params.yml  units.yml
input/: app.yml  coefficients.yml  config.yml  constants.yml  figure_print.yml  plots.yml  scenario_default.yml  webapp.yml
input/data/: coefficients.yml  fuels.yml  iea.csv  options.yml  params.yml  scenario_default.yml  steel.yml  units.yml
input/display_config/: print.yml  webapp.yml
input/figure_config/: print.yml  webapp.yml
input/figures/: fig1.yml  fig2.yml  fig3.yml  fig4.yml  fig5.yml  fig6.yml  fig7.yml  figS1.yml  figS2.yml
input/plot_config/: co2price_traj.yml  gwp_labels.yml  plotBars.yml  plotBlueGreen.yml  plotCostAndEmiOverTime.yml  plotHeatmap.yml  plotLines.yml  plotOverTime.yml  plotSensitivityFSCP.yml
input/plotting/: config_all.yml  config_fig1.yml  config_fig1ab.yml  config_fig2.yml  config_fig3.yml  config_fig4.yml  (+20 more)
src/: calc_FSCPs.py  calc_ci.py  calc_cost.py  calc_fuels.py  config_load.py  config_load_app.py  ctrls.py  data.py  dump_params.py  dump_results.py  filepaths.py  load.py  plotting.py  proc.py  timeit.py  update.py  utils.py
(+106 files in other folders)
