[tool.poetry]
name = "blue-green-h2"
version = "3.0.0"
description = ""
authors = ["Philipp Verpoort <philipp.verpoort@pik-potsdam.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
piw = {git = "https://github.com/PhilippVerpoort/piw.git", rev="v0.3.0"}
kaleido = "0.2.1"
openpyxl = "^3.1.2"
pandas = "^2.1.3"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
